--- a/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/register/register.component.html
+++ b/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/register/register.component.html
@@ -104,4 +104,43 @@
        existing User??<a routerLink="/login">click here to login</a>
     </div>
     </form>
+    <hr>
+    <form #regForm="ngForm" (submit)="update(regForm)">
+                <table class="tblClass">
+                    <tr><td><label>Name: </label></td>
+                        <td><input type="text" name="empName" [(ngModel)]="myEmployee.empName"></td>
+                    </tr>
+                    
+                    <tr>
+                        <td><label>Salary:</label></td>
+                        <td><input type="number" name="empSalary" [(ngModel)]="myEmployee.empSalary"></td>
+                    </tr>
+                    
+                    <tr>
+                        <td><label>Gender:</label></td>
+                        <td>Male: <input type="radio" value="male"  name="empGender"  >
+                             Female: <input type="radio" value="female" name="empGender"></td>
+                    </tr>
+                    <tr>
+                        <td><label>Address:</label></td>
+                        <td><input type="text" ></td>
+                    </tr>
+                   
+                    <tr>
+                        <td><label>Department:</label></td>
+                        <td>
+                        <select  name="departmentId" [(ngModel)]="myEmployee.departmentId">
+                            <option value="LD">Learning and Developement</option>
+                            <option value="JW">Java Web</option>
+                            <option value="DN">Dot Net</option>
+                            <option value="HR">Human Resource</option>
+                        </select>
+                    </td>
+                    </tr>
+                    <tr>
+                        <input type="submit" value="REGISTER"/>
+                        <input type="reset" value="RESET"/>
+                    </tr>
+                </table>  
+    </form>
 </section>
