--- a/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/register/register.component.html
+++ b/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/register/register.component.html
@@ -197,13 +197,11 @@
                     <td *ngIf="deptId!.errors!['required']">Please select department</td>
                 </tr>
                 <tr>
-                    <input type="submit"  value="REGISTER"/>
+                    <input type="submit"  value="UPDATE"/>
                     <input type="reset" value="RESET"/>
                 </tr>
             </table>       
         </div>
-        <div>
-           existing User??<a routerLink="/login">click here to login</a>
-        </div>
+       
         </form>
 </section>
