--- a/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/home/home.component.html
+++ b/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/home/home.component.html
@@ -29,4 +29,5 @@ EMS helps to eliminate the manual process and saves a lot
         <h3>Child Rout view gets loaded here</h3>
         <router-outlet></router-outlet>
     </section>
+    <app-math></app-math>
 </section>
