--- a/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/home/home.component.html
+++ b/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/home/home.component.html
@@ -30,4 +30,7 @@ EMS helps to eliminate the manual process and saves a lot
         <router-outlet></router-outlet>
     </section>
     <app-math></app-math>
+    <hr>
+    <hr>
+    <app-operation></app-operation>
 </section>
