--- a/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/math/math.component.html
+++ b/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/math/math.component.html
@@ -12,3 +12,8 @@
         <h4>Addition is: {{addResult}}</h4>
     </div>
 </section>
+<section>
+    <h3>Counter Logic</h3>
+    <h4>Counter is: {{counter1}}</h4>
+    <button (click)="getCount()">INCREASE</button>
+</section>
