--- a/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/navbar/navbar.component.html
+++ b/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/navbar/navbar.component.html
@@ -2,7 +2,7 @@
     <ol class="navbar">
         <li><a  routerLink="home">HOME</a></li>
         <li><a routerLink="login">LOGIN</a></li>
-        <li><a href="#">EMPLOYEES</a></li>
+        <li><a routerLink="employees">EMPLOYEES</a></li>
         <li><a routerLink="departments">DEPARMENTS</a></li>
         <li><a href="#">CONTACT US</a></li>
     </ol>
