--- a/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/employee-details/employee-details.component.html
+++ b/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/employee-details/employee-details.component.html
@@ -16,6 +16,7 @@
                 <td>{{employee.empAddress}}</td>
                 <td>{{employee.emailId}}</td>
                 <td><button (click)="pass(employee.id)">DELETE</button></td>
+                <td><a [routerLink]="['/register',employee.id]">EDIT</a></td>
             </tr>
         </tbody>
     </table>
