--- a/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/register/register.component.html
+++ b/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/register/register.component.html
@@ -106,7 +106,7 @@
     </div>
     </form>
     <hr>
-   <!--  <form #regForm="ngForm" (submit)="update(regForm)">
+ <!-- <form #regForm="ngForm" (submit)="update(regForm)">
                 <table class="tblClass">
                     <tr><td><label>Name: </label></td>
                         <td><input type="text" name="empName" [(ngModel)]="myEmployee.empName"></td>
@@ -150,7 +150,7 @@
             <h1>Employee Update Form</h1>
             <table class="tblClass">
                 <tr><td><label>Name: </label></td>
-                    <td><input type="text" formControlName="empName"></td>
+                    <td><input type="text" formControlName="empName" [value]="myEmployee.empName"></td>
                 </tr>
                 <tr *ngIf="ename?.touched && ename?.invalid" class="errMsg">
                     <td></td>
@@ -161,7 +161,7 @@
     
                 <tr>
                     <td><label>Salary:</label></td>
-                    <td><input type="number" formControlName="empSalary" ></td>
+                    <td><input type="number" formControlName="empSalary" [value]="myEmployee.empSalary"></td>
                 </tr>
                 <tr *ngIf="esalary?.touched && esalary?.invalid" class="errMsg">
                     <td></td>
@@ -175,7 +175,7 @@
                 </tr>
                 <tr>
                     <td><label>Address:</label></td>
-                    <td><input type="text" formControlName="empAddress"></td>
+                    <td><input type="text" formControlName="empAddress" [value]="myEmployee.empAddress"></td>
                 </tr>
                 <tr *ngIf="eaddress?.touched && eaddress?.invalid" class="errMsg">
                     <td></td>
@@ -185,7 +185,7 @@
                 <tr>
                     <td><label>Department:</label></td>
                     <td>
-                    <select formControlName="departmentId" >
+                    <select formControlName="departmentId" [value]="myEmployee.departmentId">
                         <option value="LD">Learning and Developement</option>
                         <option value="JW">Java Web</option>
                         <option value="DN">Dot Net</option>
@@ -205,4 +205,10 @@
         </div>
        
         </form>
+</section>
+<section>
+    <h3>Employee Searched</h3>
+    <ol>
+        <li>{{myEmployee.empName}}</li>
+    </ol>
 </section>
