--- a/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/register/register.component.html
+++ b/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/register/register.component.html
@@ -1,8 +1,8 @@
 <section>
+    <div *ngIf="routeParameter==null">
+    <i>{{joinsuccessMessage}}</i>
+    <h1>Employee Joining Form</h1>
     <form [formGroup]="registerForm" (submit)="collectData()"> <!-- formGroup linked with form-->
-    <div>
-        <i>{{joinsuccessMessage}}</i>
-        <h1>Employee Joining Form</h1>
         <table class="tblClass">
             <tr><td><label>Name: </label></td>
                 <td><input type="text" formControlName="empName"></td>
@@ -100,130 +100,51 @@
                 <input type="reset" value="RESET"/>
             </tr>
         </table>       
-    </div>
+    </form>
     <div>
-       existing User??<a routerLink="/login">click here to login</a>
+        existing User??<a routerLink="/login">click here to login</a>
+     </div>
+</div>
+    <hr>
+    <div *ngIf="routeParameter!=null">
+    <h2>Employee Update Form</h2>
+    <form #regForm="ngForm" (submit)="collecUpdatedData()">
+        <table class="tblClass">
+            <tr><td><label>Name: </label></td>
+                <td><input type="text" name="empName" [(ngModel)]="myEmployee.empName"></td>
+            </tr>
+            <tr>
+                <td><label>Salary:</label></td>
+                <td><input type="number" name="empSalary" [(ngModel)]="myEmployee.empSalary"></td>
+            </tr>
+            
+            <tr>
+                <td><label>Gender:</label></td>
+                <td>Male: <input type="radio" value="male" [(ngModel)]="myEmployee.empGender"  name="empGender"  >
+                        Female: <input type="radio" value="female" [(ngModel)]="myEmployee.empGender" name="empGender"></td>
+            </tr>
+            <tr>
+                <td><label>Address:</label></td>
+                <td><input type="text" name="empAddress" [(ngModel)]="myEmployee.empAddress"></td>
+            </tr>
+            
+            <tr>
+                <td><label>Department:</label></td>
+                <td>
+                <select  name="departmentId" [(ngModel)]="myEmployee.departmentId">
+                    <option value="LD">Learning and Developement</option>
+                    <option value="JW">Java Web</option>
+                    <option value="DN">Dot Net</option>
+                    <option value="HR">Human Resource</option>
+                </select>
+            </td>
+            </tr>
+            <tr>
+                <input type="submit" value="UPDATE"/>
+                <input type="reset" value="RESET"/>
+            </tr>
+        </table>  
+    </form>
     </div>
-    </form>
-    <hr>
-    <h2>Template Driven Form</h2>
- <form #regForm="ngForm" (submit)="collecUpdatedData()">
-                <table class="tblClass">
-                    <tr><td><label>Name: </label></td>
-                        <td><input type="text" name="empName" [(ngModel)]="myEmployee.empName"></td>
-                    </tr>
-                    
-                    <tr>
-                        <td><label>Salary:</label></td>
-                        <td><input type="number" name="empSalary" [(ngModel)]="myEmployee.empSalary"></td>
-                    </tr>
-                    
-                    <tr>
-                        <td><label>Gender:</label></td>
-                        <td>Male: <input type="radio" value="male" [(ngModel)]="myEmployee.empGender"  name="empGender"  >
-                             Female: <input type="radio" value="female" [(ngModel)]="myEmployee.empGender" name="empGender"></td>
-                    </tr>
-                    <tr>
-                        <td><label>Address:</label></td>
-                        <td><input type="text" name="empAddress" [(ngModel)]="myEmployee.empAddress"></td>
-                    </tr>
-                   
-                    <tr>
-                        <td><label>Department:</label></td>
-                        <td>
-                        <select  name="departmentId" [(ngModel)]="myEmployee.departmentId">
-                            <option value="LD">Learning and Developement</option>
-                            <option value="JW">Java Web</option>
-                            <option value="DN">Dot Net</option>
-                            <option value="HR">Human Resource</option>
-                        </select>
-                    </td>
-                    </tr>
-                    <tr>
-                        <input type="submit" value="UPDATE"/>
-                        <input type="reset" value="RESET"/>
-                    </tr>
-                </table>  
-    </form>
-    <hr>
-    <!-- <form [formGroup]="updateForm" (submit)="updateF()">
-        <div>
-            <h1>Employee Update Form</h1>
-            <table class="tblClass">
-                <tr><td><label>Id: </label></td>
-                    <td><input type="text" [value]="myEmployee.id" readonly></td>
-                </tr>
-                <tr><td><label>Name: </label></td>
-                    <td><input type="text" formControlName="empName" [value]="myEmployee.empName"></td>
-                </tr>
-                <tr *ngIf="ename?.touched && ename?.invalid" class="errMsg">
-                    <td></td>
-                    <td *ngIf="ename!.errors!['required']">Employee Name is required</td>
-                    <td *ngIf="ename!.errors!['minlength']">Please add min 2 characters</td>
-                    <td *ngIf="ename!.errors!['pattern']">only alphabets allowed</td>
-                </tr>
-    
-                <tr>
-                    <td><label>Salary:</label></td>
-                    <td><input type="number" formControlName="empSalary" [value]="myEmployee.empSalary"></td>
-                </tr>
-                <tr *ngIf="esalary?.touched && esalary?.invalid" class="errMsg">
-                    <td></td>
-                    <td *ngIf="esalary!.errors!['required']">Salary is required</td>
-                    <td *ngIf="esalary!.errors!['min']">-ve value not allowed</td>
-                </tr>
-                <tr>
-                    <td><label>Gender:</label></td>
-                    <td>Male: <input type="radio" value="male"  name="empGender"  formControlName="empGender" >
-                         Female: <input type="radio" value="female" name="empGender" formControlName="empGender"></td>
-                </tr>
-                <tr>
-                    <td><label>Address:</label></td>
-                    <td><input type="text" [formControlName]="myEmployee.empAddress" [value]="myEmployee.empAddress"></td>
-                </tr>
-                <tr *ngIf="eaddress?.touched && eaddress?.invalid" class="errMsg">
-                    <td></td>
-                    <td *ngIf="eaddress!.errors!['required']">Address is required</td>
-                   
-                </tr>
-                <tr>
-                    <td><label>Department:</label></td>
-                    <td>
-                    <select formControlName="departmentId" [value]="myEmployee.departmentId">
-                        <option value="LD">Learning and Developement</option>
-                        <option value="JW">Java Web</option>
-                        <option value="DN">Dot Net</option>
-                        <option value="HR">Human Resource</option>
-                    </select>
-                </td>
-                </tr>
-                <tr *ngIf="deptId?.touched &&deptId?.invalid" class="errMsg">
-                    <td></td>
-                    <td *ngIf="deptId!.errors!['required']">Please select department</td>
-                </tr>
-                <tr>
-                    <td>Email Id:</td>
-                    <td><input type="email" formControlName="emailId" [value]="myEmployee.emailId" ></td>
-                </tr>
-               
-                <tr>
-                    <td>Set password:</td>
-                    <td><input type="passsword" formControlName="password" [value]="myEmployee.password" ></td>
-                </tr>
-
-
-                <tr>
-                    <input type="submit"  value="UPDATE"/>
-                    <input type="reset" value="RESET"/>
-                </tr>
-            </table>       
-        </div>
-       
-        </form> -->
 </section>
-<section>
-    <h3>Employee Searched</h3>
-    <ol>
-        <li>{{myEmployee.empName}}</li>
-    </ol>
-</section>
+
