Table Material UI

--- a/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/app.component.html
+++ b/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/app.component.html
@@ -6,7 +6,11 @@
     <p>This view gets updated when Rout path matches</p>
     <router-outlet></router-outlet>
 </section>
+<section>
+    <h3>To display material components</h3>
 
+
+</section>
 
 
 <app-footer></app-footer>  <!-- component directive-->
