--- a/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/home/home.component.html
+++ b/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/home/home.component.html
@@ -34,3 +34,6 @@ EMS helps to eliminate the manual process and saves a lot
     <hr>
     <app-operation></app-operation>
 </section>
+<section>
+    <mat-slide-toggle ></mat-slide-toggle>
+</section>
