--- a/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/department/department.component.html
+++ b/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/department/department.component.html
@@ -63,9 +63,16 @@
 <section>
     <label>Enter Department Name if change:</label>
     <input type="text" [(ngModel)]="deparment.deptName" (keyup)="display()" (focus)="display()" #nameNode>
-    <button (click)="pass(nameNode.value)" #btnNode>CLICK</button>
+    <button (click)="pass(nameNode.value)" #btnNode  mat-raised-button color="primary">CLICK</button>
+    <button mat-icon-button color="primary">
+        <mat-icon>more_vert</mat-icon>
+    </button>
+    <button mat-icon-button  color="warn">
+        <mat-icon>home</mat-icon>
+    </button>
     <input type="radio" (change)="test()"> 
 </section>
+<h3>Deparment Input Section</h3>
 <section class="fontStyle colorStyle">
     <label>Enter Dept Id:</label>
     <input type="text" #idNode>
@@ -75,7 +82,9 @@
     <input type="number" #budgetNode>
     <label>Enter Dept Establishment year:</label>
     <input type="number" #yearNode>
-    <button (click)="addDeparment(idNode.value,dnameNode.value,budgetNode.value,yearNode.value)" class="btn btn-success">ADD DEPARMENT</button>
+    <b>-------------</b>
+    <button  mat-button   color="primary"  (click)="addDeparment(idNode.value,dnameNode.value,budgetNode.value,yearNode.value)" class="btn btn-success">ADD DEPARMENT</button>
+    <b>-------------</b>
 </section>
 <section [ngClass]="styleArray">
     <table border="3">
@@ -208,3 +217,39 @@
             </tr>
         </tbody>
     </table>
+<hr>
+<h2>Material Table</h2>
+<table mat-table [dataSource]="deptArray" >
+
+    <!--- Note that these columns can be defined in any order.
+          The actual rendered columns are set as a property on the row definition" -->
+  
+    <!-- Position Column -->
+    <ng-container matColumnDef="deptId">
+      <th mat-header-cell *matHeaderCellDef> Dept Id </th>
+      <td mat-cell *matCellDef="let dept"> {{dept.deptId}} </td>
+    </ng-container>
+  
+    <!-- Name Column -->
+    <ng-container matColumnDef="deptName">
+      <th mat-header-cell *matHeaderCellDef> Dept Name </th>
+      <td mat-cell *matCellDef="let dept"> {{dept.deptName}} </td>
+    </ng-container>
+  
+ <!-- Est year Column -->
+ <ng-container matColumnDef="deptEstYear">
+    <th mat-header-cell *matHeaderCellDef> Dept Establishment Year </th>
+    <td mat-cell *matCellDef="let dept"> {{dept.deptEstYear}} </td>
+  </ng-container>
+
+
+    <!-- Budget Column -->
+    <ng-container matColumnDef="deptBudget">
+      <th mat-header-cell *matHeaderCellDef> Dept Budget </th>
+      <td mat-cell *matCellDef="let dept"> {{dept.deptBudget}} </td>
+    </ng-container>
+  
+    
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
