--- a/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/department/department.component.css
+++ b/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/department/department.component.css
@@ -20,3 +20,13 @@
     background-color: blue;
     border: 2px solid red;
 }
+
+.mat-column-deptName{
+    background-color: aqua;
+}
+.mat-column-deptId{
+    font-size: 30px;
+}
+.dept-table{
+    border: 10px double red;
+}
