--- a/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/department/department.component.html
+++ b/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/department/department.component.html
@@ -63,7 +63,7 @@
 <section>
     <label>Enter Department Name if change:</label>
     <input type="text" [(ngModel)]="deparment.deptName" (keyup)="display()" (focus)="display()" #nameNode>
-    <button (click)="pass(nameNode.value)" #btnNode  mat-raised-button color="primary">CLICK</button>
+    <button (click)="pass(nameNode.value)" #btnNode  mat-raised-button color="warn">CLICK</button>
     <button mat-icon-button color="primary">
         <mat-icon>more_vert</mat-icon>
     </button>
@@ -83,7 +83,7 @@
     <label>Enter Dept Establishment year:</label>
     <input type="number" #yearNode>
     <b>-------------</b>
-    <button  mat-button   color="primary"  (click)="addDeparment(idNode.value,dnameNode.value,budgetNode.value,yearNode.value)" class="btn btn-success">ADD DEPARMENT</button>
+    <button  mat-button   color="warn"  (click)="addDeparment(idNode.value,dnameNode.value,budgetNode.value,yearNode.value)" class="btn btn-success">ADD DEPARMENT</button>
     <b>-------------</b>
 </section>
 <section [ngClass]="styleArray">
@@ -219,7 +219,7 @@
     </table>
 <hr>
 <h2>Material Table</h2>
-<table mat-table [dataSource]="deptArray" >
+<table mat-table [dataSource]="deptArray" class="mat-elevation-z8 dept-table"> <!-- built in class shadow-->
 
     <!--- Note that these columns can be defined in any order.
           The actual rendered columns are set as a property on the row definition" -->
