--- a/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/login/login.component.html
+++ b/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/login/login.component.html
@@ -10,7 +10,7 @@
             </tr>
             <tr>
                 <td><label>Password:</label></td>
-                <td><input type="text" name="password" ngModel required></td>
+                <td><input type="password" name="password" ngModel required></td>
             </tr>
             <tr>
                 <input type="submit" value="Sign-in">
