--- a/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/login/login.component.html
+++ b/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/login/login.component.html
@@ -18,6 +18,7 @@
             </tr>
         </table>  
     </form>
+    <input type="text" [(ngModel)]="companyName">
     <div>
         new User??<a routerLink="/register">click here to register</a>
     </div>
