--- a/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/employee-details/employee-details.component.html
+++ b/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/employee-details/employee-details.component.html
@@ -21,3 +21,7 @@
         </tbody>
     </table>
 </section>
+<section>
+    <h2>SalaryDetails</h2>
+    <app-employee-salary-details></app-employee-salary-details>
+</section>
