--- a/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/app.component.html
+++ b/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/app.component.html
@@ -1,16 +1,8 @@
 
 <app-header></app-header>
-
 <!-- dynamic view-->
-<section style="border: 10px double green;">
+<section class="dynamicSection">
     <p>This view gets updated when Rout path matches</p>
     <router-outlet></router-outlet>
 </section>
-<section>
-    <h3>To display material components</h3>
-
-
-</section>
-
-
 <app-footer></app-footer>  <!-- component directive-->
