--- a/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/employee-details/employee-details.component.html
+++ b/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/employee-details/employee-details.component.html
@@ -3,7 +3,7 @@
         <thead>
             <tr>
                 <th>ID</th> <th>Name</th> <th>Salary</th><th>Department Id</th> 
-                <th>Gender</th> <th>Address</th><th>EmailId</th>
+                <th>Gender</th> <th>Address</th><th>EmailId</th><th colspan="2">ACTION</th>
             </tr>
         </thead>
         <tbody>
@@ -15,13 +15,9 @@
                 <td>{{employee.empGender}}</td>
                 <td>{{employee.empAddress}}</td>
                 <td>{{employee.emailId}}</td>
-                <td><button (click)="pass(employee.id)">DELETE</button></td>
-                <td><a  class="btn btn-primary" [routerLink]="['/register',employee.id]">EDIT</a></td>
+                <th><a  class="btn btn-primary" [routerLink]="['/register',employee.id]">EDIT</a></th>
+                <th><button class="btn btn-danger" (click)="pass(employee.id)">DELETE</button></th>
             </tr>
         </tbody>
     </table>
-</section>
-<section>
-    <h2>SalaryDetails</h2>
-    <app-employee-salary-details></app-employee-salary-details>
 </section>
