--- a/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/register/register.component.html
+++ b/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/register/register.component.html
@@ -1,11 +1,11 @@
-<section>
+<section >
     <div *ngIf="routeParameter==null">
     <i>{{joinsuccessMessage}}</i>
     <h1>Employee Joining Form</h1>
     <form [formGroup]="registerForm" (submit)="collectData()"> <!-- formGroup linked with form-->
         <table class="tblClass">
-            <tr><td><label>Name: </label></td>
-                <td><input type="text" formControlName="empName"></td>
+            <tr><td><label for="empName">Name: </label></td>
+                <td><input type="text" id="empName" formControlName="empName"></td>
             </tr>
             <tr *ngIf="ename?.touched && ename?.invalid" class="errMsg">
                 <td></td>
@@ -15,8 +15,8 @@
             </tr>
 
             <tr>
-                <td><label>Salary:</label></td>
-                <td><input type="number" formControlName="empSalary" ></td>
+                <td><label for="empSalary">Salary:</label></td>
+                <td><input type="number" id="empSalary" formControlName="empSalary" ></td>
             </tr>
             <tr *ngIf="esalary?.touched && esalary?.invalid" class="errMsg">
                 <td></td>
@@ -25,12 +25,12 @@
             </tr>
             <tr>
                 <td><label>Gender:</label></td>
-                <td>Male: <input type="radio" value="male"  name="empGender"  formControlName="empGender" >
-                     Female: <input type="radio" value="female" name="empGender" formControlName="empGender"></td>
+                <td><label for="male">Male:</label> <input type="radio" id="male" value="male"  name="empGender"  formControlName="empGender" >
+                     <label for="female">Female:</label> <input type="radio" id="female" value="female" name="empGender" formControlName="empGender"></td>
             </tr>
             <tr>
-                <td><label>Address:</label></td>
-                <td><input type="text" formControlName="empAddress"></td>
+                <td><label for="empAddress" >Address:</label></td>
+                <td><input type="text" id="empAddress" formControlName="empAddress"></td>
             </tr>
             <tr *ngIf="eaddress?.touched && eaddress?.invalid" class="errMsg">
                 <td></td>
@@ -38,9 +38,9 @@
                
             </tr>
             <tr>
-                <td><label>Department:</label></td>
+                <td><label for="departmentId">Department:</label></td>
                 <td>
-                <select formControlName="departmentId" >
+                <select id="departmentId" formControlName="departmentId" >
                     <option value="LD">Learning and Developement</option>
                     <option value="JW">Java Web</option>
                     <option value="DN">Dot Net</option>
@@ -53,8 +53,8 @@
                 <td *ngIf="deptId!.errors!['required']">Please select department</td>
             </tr>
             <tr>
-                <td>Email Id:</td>
-                <td><input type="email" formControlName="emailId"></td>
+                <td><label for="emailId">Email Id:</label></td>
+                <td><input type="email" id="emailId" formControlName="emailId"></td>
             </tr>
             <tr *ngIf="eemail?.touched &&eemail ?.invalid" class="errMsg">
                 <td></td>
@@ -62,8 +62,8 @@
                 <td *ngIf="eemail!.errors!['email']">Please put valid email id</td>
             </tr>
             <tr>
-                <td>Set password:</td>
-                <td><input [type]="nodeType" formControlName="password"></td>
+                <td><label for="password">Set password:</label></td>
+                <td><input [type]="nodeType" id="password" formControlName="password"></td>
             </tr>
             <tr *ngIf="epass?.touched && epass?.invalid" class="errMsg">
                 <td></td>
@@ -80,8 +80,8 @@
             </td>
             </tr>
             <tr>
-                <td>Confirm password:</td>
-                <td><input [type]="nodeType" formControlName="confirmPassword" [ngStyle]="{border:(registerForm.hasError('passMatch') ? 'red 2px solid':'')}"></td>
+                <td><label for="confirmPassword">Confirm password:</label></td>
+                <td><input id="confirmPassword" [type]="nodeType" formControlName="confirmPassword" [ngStyle]="{border:(registerForm.hasError('passMatch') ? 'red 2px solid':'')}"></td>
             </tr>
             <tr *ngIf="econfirmpass?.touched && econfirmpass?.invalid" class="errMsg">
                 <td></td>
@@ -93,7 +93,6 @@
             </tr>
             <tr>
                 <td></td>
-                <td><input type="checkbox" (change)="showP($event)">:Show Password</td>
                 <td><mat-checkbox (change)="showP($event)"></mat-checkbox>: Show Password</td>
             </tr>
             <tr>
@@ -111,12 +110,12 @@
     <h2>Employee Update Form</h2>
     <form #regForm="ngForm" (submit)="collecUpdatedData()">
         <table class="tblClass">
-            <tr><td><label>Name: </label></td>
-                <td><input type="text" name="empName" [(ngModel)]="myEmployee.empName"></td>
+            <tr><td><label for="empName">Name: </label></td>
+                <td><input type="text" id="empName" name="empName" [(ngModel)]="myEmployee.empName"></td>
             </tr>
             <tr>
-                <td><label>Salary:</label></td>
-                <td><input type="number" name="empSalary" [(ngModel)]="myEmployee.empSalary"></td>
+                <td><label for="empSalary">Salary:</label></td>
+                <td><input type="number" id="empSalary" name="empSalary" [(ngModel)]="myEmployee.empSalary"></td>
             </tr>
             
             <tr>
